# robot_grasp

./: CMakeLists.txt  Kinova_pick_place.cpp  Kinova笔记  README.md  package.xml
launch/: load_model.launch  load_object.launch
models/grasp_object/: basket.STL  basket.dae  model.config
models/grasp_object/ShortCylinder/: ShortCylinder.sdf  model.config
models/grasp_object/ShortCylinder/meshes/: ShortCylinder.STL  ShortCylinder.dae
models/grasp_object/Sphere/: model.config  sphere.sdf
models/grasp_object/Sphere/meshes/: sphere.STL  sphere.dae
models/grasp_object/calib/: calib.sdf  model.config
models/grasp_object/calib/materials/scripts/: calib.material
models/grasp_object/calib/meshes/: calib.STL
models/grasp_object/cone/: cone.sdf  cone.sdf~
models/grasp_object/cone/materials/scripts/: brick_box.material~  cone.material
models/grasp_object/cone/meshes/: cone.STL  cone.dae
models/grasp_object/cube/: cube.sdf  model.config
models/grasp_object/cube/meshes/: cube.STL  cube.dae
models/grasp_object/cylinder/: cylinder.sdf  model.config
models/grasp_object/cylinder/meshes/: cylinder.STL  cylinder.dae
models/grasp_object/fourPrism/: fourPrism.sdf  fourPrism.sdf~  model.config
models/grasp_object/fourPrism/materials/scripts/: fourPrism.material~
models/grasp_object/fourPrism/meshes/: fourPrism.STL  fourPrism.dae
models/grasp_object/fourPrismoid/: fourPrismoid.sdf  model.config
models/grasp_object/fourPrismoid/meshes/: fourPrismoid.STL  fourPrismoid.dae
models/grasp_object/fourPyramid/: fourPyramid.sdf  model.config
models/grasp_object/fourPyramid/meshes/: fourPyramid.STL  fourPyramid.dae
models/grasp_object/halfSphere/: halfSphere.sdf  model.config
models/grasp_object/halfSphere/meshes/: halfSphere.STL  halfSphere.dae
models/grasp_object/sixPrism/: model.config  sixPrism.sdf
models/grasp_object/sixPrism/meshes/: sixPrism.STL  sixPrism.dae
models/grasp_object/threePrism/: model.config  threePrism.sdf  threePrism.sdf~
models/grasp_object/threePrism/meshes/: therePrism.STL  therePrism.dae  threePrism.dae
models/grasp_object/threePyramid/: model.config  threePyramid.sdf
models/grasp_object/threePyramid/meshes/: threePyramid.STL  threePyramid.dae
models/kinect/: model.config  model.sdf
models/kinect/006235565347/: calib_color.yaml  calib_depth.yaml  calib_ir.yaml  calib_pose.yaml
models/kinova/: j2s7s300_image_capture.xacro  j2s7s300_withBase.xacro
models/table/: table.xacro  table_properties.xacro  table_simple.xacro
models/table/meshes/: kinect_support.dae
msg/: real_detected_obj.msg  real_detected_obj_array.msg
scripts/: classfication.py  classfication.py~  transform.py  transform.py~
src/: transform.cpp  transform.cpp~
srv/: calibration_transform.srv  coordinate_transform.srv~  real_kinova_pick.srv
urdf/: training.gazebo.xacro  training.urdf.xacro
数据集/: classfication.py
