<?xml version="1.0"?>
<package>
  <name>robot_grasp</name>
  <version>0.0.0</version>
  <description>The robot_grasp package</description>

  <maintainer email="xkxhyslxh@163.com">xkx</maintainer>

  <license>TODO</license>

  <author email="xkxhyslxh@163.com">xkx</author>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>controller_manager</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>effort_controllers</run_depend>
  <run_depend>position_controllers</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>xacro</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
