<?xml version="1.0"?>
<package>
  <name>robot_grasp</name>
  <version>0.0.0</version>
  <description>The robot_grasp package</description>

  <maintainer email="marooncn@163.com">harsh</maintainer>


  <license>TODO</license>


  <author email="marooncn@163.comm">maroon</author>


  <buildtool_depend>catkin</buildtool_depend>



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
